--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "core-js": "^3.23.5",
     "dayjs": "^1.11.3",
-    "echarts": "^5.3.3",
+    "echarts": "4.8.0",
     "register-service-worker": "1.7.2",
     "vue": "2.6.14",
     "vue-class-component": "7.2.6",
