--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.23.5",
     "dayjs": "^1.11.3",
     "echarts": "4.8.0",
+    "node": "12.14.0",
     "register-service-worker": "1.7.2",
     "vue": "2.6.14",
     "vue-class-component": "7.2.6",
